[package]
name = "mix_server"
version = "0.0.0"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "mix network server library"
keywords = ["cryptography", "network", "mixnet", "anonymity"]
license = "AGPL-3.0-only"

[dependencies]
ecdh_wrapper = "0.0.5"
subtle = "0.6.0"
sphinxcrypto = "0.0.10"
mix_link = "0.0.2"
clear_on_drop = "0.2.3"
drop_guard = "0.2.1"
threadpool = "1.7.1"

[dev-dependencies]
rustc-serialize = "0.3.24"
rand = "^0.4.2"
