[package]
name = "mix_server"
version = "0.0.0"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "mix network server library"
keywords = ["cryptography", "network", "mixnet", "anonymity"]
license = "AGPL-3.0-only"

[dependencies]
clap = "2.32.0"
toml = "0.4"
serde_derive = "1.0.80"
serde = "1.0.80"
log = "0.4.3"
log4rs = "0.8.0"
ecdh_wrapper = "0.0.6"
sphinxcrypto = "0.0.12"
mix_link = { path = "../mix_link" }
clear_on_drop = "0.2.3"
drop_guard = "0.2.1"
crossbeam = "0.5.0"
crossbeam-thread = "0.0.0"
crossbeam-channel = "0.3.0"
crossbeam-utils = "0.6.1"

[dev-dependencies]
rustc-serialize = "0.3.24"
rand = "^0.4.2"

[[bin]]
name = "server"
doc = false