[package]
name = "mix_server"
version = "0.0.0"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "mix network server library"
keywords = ["cryptography", "network", "mixnet", "anonymity"]
license = "AGPL-3.0-only"

[dependencies]
clap = "2.32.0"
toml = "0.4"
serde_derive = "1.0.80"
serde = "1.0.80"
log = "0.4.3"
log4rs = "0.8.0"
crossbeam = "0.5.0"
crossbeam-channel = "0.3.0"
crossbeam-utils = "0.6.1"
crossbeam-thread = "0.0.0"
epoch = "0.0.1"
rand = "^0.4.2"
byteorder = "1.2.6"
bloom = "0.3.2"
sled = "0.16.2"
ecdh_wrapper = "0.0.7"
sphinxcrypto = "0.0.16"
sphinx_replay_cache = "0.0.1"
mix_link = { path = "../mix_link" }

[dev-dependencies]
rustc-serialize = "0.3.24"
rand = "^0.4.2"
tempfile = "3.0.4"

[[bin]]
name = "server"
doc = false